# SpMM

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  a.out  dense_matrix.txt  main.cpp  run.sh  sparse_matrix.txt  spmm.cpp  spmm.hpp  testcase_gen.cpp  testcase_gen.py  tvm.py
deprecated/: CMakeLists.txt  main.cpp
deprecated/include/: debug.hpp  matrix.hpp
include/: debug.hpp  matrix.hpp
matrix/: CmakeLists.txt
scripts/: testcase_gen.py
testcase/: csr  dense
